master:
 - trash-put also accept -vv for enabling debug prints

0.21.4.18:
 - fix bug #166 'trash goes into an infinite loop when trashing files with a long filename'
 - trash-list learnt the `--trash-dir` option
 - trash-restore now supports relative paths in argument (fixes #165)
 - trash-list shows all partitions including not physical @KSR-Yasuda
   (https://github.com/andreafrancia/trash-cli/pull/178)

0.20.12.26:
 - trash-restore learnt --trash-dir option
 - add simplified Chinese README
 - trash-restore now uses 'date' as the default sort argument
 - Add to README the installation with apt
 - trash-restore now supports range select

0.20.11.23:
 - switched to psutil for listing volumes

0.20.11.7:
 - trash-put learned a --trash-dir option that can be used to specify the trash
   directory to be used as destination
 - trash-put -f now ignores files and dirs that do not exist (Don Cross)
 - trash-restore learnt --sort=(date|path|none) option (Self-Perfection)
 - trash-restore: support restoring multiple files (arendu)
 - README: now recommend using `pip` for installing trash-cli

0.17.1.14:
 - Fix a bug that causes trash-put to use $topdir/.Trash/UID trashcan even when
   it is not secure and $topdir/.Trash-UID should be used instead.

0.17.1.12:
 - Fix a bug in detecting right volume of home trash dir, if home Trash dir is a
   symbolic link, and in detecting volume of file to be trashed when it is
   specified as contained in a directory that is a symbolic link that crosses
   volumes boundaries (#38)
 - Make some code python 3 compatible
 - Fixed README.

0.17.1.1:
 - Now trash-rm supports full path matching, using a pattern starting with slash '/' Fix #67
 - Fix typo in trash-rm(1) man page
 - Add a reference to trash-rm(1) to all man pges
 - Fix inconsistent apostrophes
 - Add support for --trash-dir option to trash-empty

0.16.12.29:
 - trash-rm no more crashes on .trashinfo files without Path (#69)

0.16.12.28: