@@ -1,5 +1,6 @@
 master:
  - trash-put also accept -vv for enabling debug prints
+ - add (hidden and undocumented) --size option to trash-list
 
 0.21.4.18:
  - fix bug #166 'trash goes into an infinite loop when trashing files with a long filename'
